 Bug 521608 -  nsCanvasRenderingContext2D::GetPresShell may crash or leak, r=vlad, sr=jst